--- a/5.md
+++ b/5.md
@@ -131,21 +131,21 @@ Commentators also took issue with Herberg’s position that ethnicity—understo
 ### The Struggles for Inclusion
 
 
-If ethnic Americans had by and large moved to the center of American life, racial minorities had not. Conventional white liberal wisdom recognized the problems that plagued racial minorities, but insisted that Puerto Ricans, Negroes, and Mexicans would eventually become fully integrated, especially if they adopted mainstream cultural patterns particularly with regard to family life. Prejudice, they held, was irrational and would fade in due course.[^31] Schooled by experience, racial minorities were less sanguine. Many Puerto Ricans told stories of discrimination in education, housing, and employment despite knowing English and possessing excellent credentials. The debate between the promise of assimilation and the reality came memorably through in “America” from _West Side Story_. “Life can be bright in America” is answered by “If you’re all white in America.” The persistence of race-based exclusion prompted formation of such new organizations as the Congress of Racial Equality (1942), Southern Christian Leadership Conference (1957), Puerto Rican Forum (1957), and the American G.I. Forum (1948) to supplement the older National Association for the Advancement of Colored People (1909) and the League of United Latin American Citizens (LULAC) (1929) to achieve full citizenship rights.
+If ethnic Americans had by and large moved to the center of American life, racial minorities had not. Conventional white liberal wisdom recognized the problems that plagued racial minorities, but insisted that Puerto Ricans, Negroes, and Mexicans would eventually become fully integrated, especially if they adopted mainstream cultural patterns particularly with regard to family life. Prejudice, they held, was irrational and would fade in due course.[^32] Schooled by experience, racial minorities were less sanguine. Many Puerto Ricans told stories of discrimination in education, housing, and employment despite knowing English and possessing excellent credentials. The debate between the promise of assimilation and the reality came memorably through in “America” from _West Side Story_. “Life can be bright in America” is answered by “If you’re all white in America.” The persistence of race-based exclusion prompted formation of such new organizations as the Congress of Racial Equality (1942), Southern Christian Leadership Conference (1957), Puerto Rican Forum (1957), and the American G.I. Forum (1948) to supplement the older National Association for the Advancement of Colored People (1909) and the League of United Latin American Citizens (LULAC) (1929) to achieve full citizenship rights.
 
-[^31]:	Glazer and Moynihan discuss black and Puerto Rican particularities in Glazer and Moynihan, _Beyond the Melting Pot,_ 24-136. They introduce the soon-to-be infamous discussion of the black family, hobbled not by the overt values they hold but the damages wrought by slavery, as the obstacle to success (47-51). They dismiss political protest as “shrill” and “ineffective” (84).
+[^32]:	Glazer and Moynihan discuss black and Puerto Rican particularities in Glazer and Moynihan, _Beyond the Melting Pot,_ 24-136. They introduce the soon-to-be infamous discussion of the black family, hobbled not by the overt values they hold but the damages wrought by slavery, as the obstacle to success (47-51). They dismiss political protest as “shrill” and “ineffective” (84).
 
-Achieving inclusion on grounds of a shared humanity required a challenge to a tradition of race talk that posited hierarchies based on alleged innate capacities. In contrast, black and white liberals rejected beliefs in biology as destiny, explaining white-black differences as the result of history and environment. The 1951 UNESCO statement on race, written with contributions from anthropologist Ashley Montagu and sociologist E. Franklin Frazier, set the tone with its bold proclamation that there existed no credible scientific knowledge that one human group was innately intellectually or emotionally superior or that human groups differed in their inborn capacity for development.[^32] Nearly all postwar studies of race began from Swedish economist Gunnar Myrdal’s _American Dilemma_ (1944). Chosen to lead the Carnegie Corporation study because the Corporation president thought he would be less biased than a native-born American, Myrdal initially found black people and practices, particularly the emotion-filled religious services, strange. In time, however, he realized that “in their basic human traits, the Negroes are inherently not much different from other people.” As such, their differences from “other people” resulted from white refusal to treat blacks equally. “It is . . . the white majority group that naturally determines the Negro’s ‘place.’ All our attempts to reach scientific explanations of why the Negroes are what they are and why they live as they do have regularly led to determinants on the white side of the race line.”[^33] White beliefs about black folk were often the product of myth and tradition, not impartial observation. By itself, knowing the “facts” of Negro life would not change white attitudes, Myrdal maintained. Yet he remained hopeful that exclusion and hatred would disappear, pointing to the decay of caste theory and black refusal to be a patient, submissive minority. Eventually, he posited, the conflict between the high American ideals of freedom and equality and discrimination would become too difficult to maintain psychologically and socially and would resolve itself in favor of the ideal. “The bright side [of the American dilemma] is that the conquering of color caste is America’s own innermost desire.”[^34]
+Achieving inclusion on grounds of a shared humanity required a challenge to a tradition of race talk that posited hierarchies based on alleged innate capacities. In contrast, black and white liberals rejected beliefs in biology as destiny, explaining white-black differences as the result of history and environment. The 1951 UNESCO statement on race, written with contributions from anthropologist Ashley Montagu and sociologist E. Franklin Frazier, set the tone with its bold proclamation that there existed no credible scientific knowledge that one human group was innately intellectually or emotionally superior or that human groups differed in their inborn capacity for development.[^33] Nearly all postwar studies of race began from Swedish economist Gunnar Myrdal’s _American Dilemma_ (1944). Chosen to lead the Carnegie Corporation study because the Corporation president thought he would be less biased than a native-born American, Myrdal initially found black people and practices, particularly the emotion-filled religious services, strange. In time, however, he realized that “in their basic human traits, the Negroes are inherently not much different from other people.” As such, their differences from “other people” resulted from white refusal to treat blacks equally. “It is . . . the white majority group that naturally determines the Negro’s ‘place.’ All our attempts to reach scientific explanations of why the Negroes are what they are and why they live as they do have regularly led to determinants on the white side of the race line.”[^34] White beliefs about black folk were often the product of myth and tradition, not impartial observation. By itself, knowing the “facts” of Negro life would not change white attitudes, Myrdal maintained. Yet he remained hopeful that exclusion and hatred would disappear, pointing to the decay of caste theory and black refusal to be a patient, submissive minority. Eventually, he posited, the conflict between the high American ideals of freedom and equality and discrimination would become too difficult to maintain psychologically and socially and would resolve itself in favor of the ideal. “The bright side [of the American dilemma] is that the conquering of color caste is America’s own innermost desire.”[^35]
 
-[^32]:	The statement was controversial in the scientific community on grounds that Montagu arbitrarily dismissed possibilities of mental difference without sufficient testing or explanation. Physical differences clearly existed, critics charged, so mental and temperamental ones might also. Nadine Weidman, “An Anthropologist on TV: Ashley Montagu and the Biological Basis of Human Nature, 1945-1960,” in _Cold War Social Science: Knowledge Production, Liberal Democracy and Human Nature_, ed. Mark Solovey and Hamilton Cravens (New York: Palgrave MacMillan, 2012), 220-21; Perrin Selcer, “Beyond the Cephalic Index: Negotiating Politics to Produce Unesco’s Scientific Statements on Race,” _Current Anthropology_ (2012).
+[^33]:	The statement was controversial in the scientific community on grounds that Montagu arbitrarily dismissed possibilities of mental difference without sufficient testing or explanation. Physical differences clearly existed, critics charged, so mental and temperamental ones might also. Nadine Weidman, “An Anthropologist on TV: Ashley Montagu and the Biological Basis of Human Nature, 1945-1960,” in _Cold War Social Science: Knowledge Production, Liberal Democracy and Human Nature_, ed. Mark Solovey and Hamilton Cravens (New York: Palgrave MacMillan, 2012), 220-21; Perrin Selcer, “Beyond the Cephalic Index: Negotiating Politics to Produce Unesco’s Scientific Statements on Race,” _Current Anthropology_ (2012).
 
-[^33]:	Myrdal, _An American Dilemma_, xlvii.
+[^34]:	Myrdal, _An American Dilemma_, xlvii.
 
-[^34]:	Myrdal, _An American Dilemma_, 1021.
+[^35]:	Myrdal, _An American Dilemma_, 1021.
 
-Postwar movies followed suit in rejection of racial hierarchy. Generally not a subject of Hollywood productions of the 1920s and 1930s, racial problems formed the basis of a quartet of major films of 1949: _Intruder in the Dust_, _Lost Boundaries_, _Home of the Brave_, and _Pinky_.[^35] Begun as a Broadway play, _Home of the Brave_ switched its main character from Jewish to black because studio heads decided “Jews have been done.” Sent out with both a long-time friend and a bigot to map a Japanese-held island, the black engineer, Peter Moss, becomes paralyzed when his friend dies in his arms. Carried to safety by the bigot, which only intensifies his paralysis, Moss regains control of his body when the attending psychiatrist yells a derogatory racial term. That word breaks the spell cast by Moss’s internalization of racism, and he comes to realize he is no different from anyone else. Stanley Kramer produced the film and plumbed same territory more tendentiously with _The Defiant Ones (1958)_, the story of two escaped chain-gang convicts one black (Sidney Poitier) and one racist (Tony Curtis). Over the course of the film, the two learn to recognize each other’s humanity and cooperate with one another, even after they break their chains. Chased by a posse, their only hope of escape is to jump a freight train. Poitier hops aboard but cannot lift up the straggling Curtis. Rather than ride by himself, he jumps back down and waits with Curtis for re-capture.
+Postwar movies followed suit in rejection of racial hierarchy. Generally not a subject of Hollywood productions of the 1920s and 1930s, racial problems formed the basis of a quartet of major films of 1949: _Intruder in the Dust_, _Lost Boundaries_, _Home of the Brave_, and _Pinky_.[^36] Begun as a Broadway play, _Home of the Brave_ switched its main character from Jewish to black because studio heads decided “Jews have been done.” Sent out with both a long-time friend and a bigot to map a Japanese-held island, the black engineer, Peter Moss, becomes paralyzed when his friend dies in his arms. Carried to safety by the bigot, which only intensifies his paralysis, Moss regains control of his body when the attending psychiatrist yells a derogatory racial term. That word breaks the spell cast by Moss’s internalization of racism, and he comes to realize he is no different from anyone else. Stanley Kramer produced the film and plumbed same territory more tendentiously with _The Defiant Ones (1958)_, the story of two escaped chain-gang convicts one black (Sidney Poitier) and one racist (Tony Curtis). Over the course of the film, the two learn to recognize each other’s humanity and cooperate with one another, even after they break their chains. Chased by a posse, their only hope of escape is to jump a freight train. Poitier hops aboard but cannot lift up the straggling Curtis. Rather than ride by himself, he jumps back down and waits with Curtis for re-capture.
 
-[^35]:	The following discussion of the films is indebted to Thomas H. Pauly, “Black Images and White Culture During the Decade Before the Civil Rights Movement,” _American Studies_ 31, no. 2 (1990), 102-20.
+[^36]:	The following discussion of the films is indebted to Thomas H. Pauly, “Black Images and White Culture During the Decade Before the Civil Rights Movement,” _American Studies_ 31, no. 2 (1990), 102-20.
 
 The politics of Elia Kazan’s _Pinky_ (1949), the third highest grossing film of the year, were less certain. Pinky, a young, light-skinned nurse played by the white actress Jeanne Crain (chosen over both Lena Horne and Dorothy Dandridge), comes South to visit her illiterate laundress grandmother, Dicey (Ethel Waters). She has passed for white in the North and even has fallen in love with a white doctor, Tom Adams (William Lundigan), who knows nothing of her racial identity. In the South, Pinky is constantly harassed by police and hooligans. Requested by a black doctor to stay and train nurses, she initially declines. When her grandmother pleads with her to care for Dicey’s ailing white neighbor and friend Miss Em (Ethel Barrymore), Pinky reluctantly agrees. She had long disliked Miss Em, but their common humanity enables them to strike up a friendship. That friendship leads Miss Em to leave her land to Pinky in her will, which is promptly challenged. Despite all odds Pinky prevails. When Tom tracks her down and asks her to sell the land and come north passing as white, she refuses and devotes her effort instead to a clinic and nursery school for black children.
 
@@ -159,42 +159,40 @@ _In the Year of the Boar and Jackie Robinson_ is a loosely fictionalized account
 
 The musical and movie change the story line by dampening the licentiousness of bachelor life, the class conflicts, and the economic nature of marriage. It does share the preference for assimilation, even including a song “Chop Suey” that celebrates American diversity. The Chinese assimilation depicted in _Flower Drum Song_ did not entail anything so radical as mixing on equal terms with whites, who are very much an implied presence. Although the play and movie flattered white audiences with its validation of American culture, its popularity rested on the pageantry of musical numbers and the frisson in the presentation of exotic people. Small wonder it has subsequently been dismissed as patronizing.
 
-Postwar public opinion turned toward inclusiveness in part as a recoil from Nazi genocide and in part as a recognition that American apartheid put the United States at a marked disadvantage with the peoples of the decolonizing world. Gradually politicians understood the need to dismantle the system of exclusion. Particularly notable in the growth of sentiment to redress the failure of American ideals was the speech of Minneapolis mayor Hubert Humphrey to the 1948 Democratic Convention. Challenging the majority report of the platform Committee that had deferred to white Southern sentiment, Humphrey forcefully argued for the morality and political advantage endorsing Harry Truman’s civil rights program. Humphrey prevailed and was thrust into the heart of national politics.[^36]
+Postwar public opinion turned toward inclusiveness in part as a recoil from Nazi genocide and in part as a recognition that American apartheid put the United States at a marked disadvantage with the peoples of the decolonizing world. Gradually politicians understood the need to dismantle the system of exclusion. Particularly notable in the growth of sentiment to redress the failure of American ideals was the speech of Minneapolis mayor Hubert Humphrey to the 1948 Democratic Convention. Challenging the majority report of the platform Committee that had deferred to white Southern sentiment, Humphrey forcefully argued for the morality and political advantage endorsing Harry Truman’s civil rights program. Humphrey prevailed and was thrust into the heart of national politics.[^37]
 
-[^36]:	Jennifer A. Delton, _Making Minnesota Liberal: Civil Rights and the Transformation of the Democratic Party_ (Minneapolis: University of Minnesota Press, 2002).
+[^37]:	Jennifer A. Delton, _Making Minnesota Liberal: Civil Rights and the Transformation of the Democratic Party_ (Minneapolis: University of Minnesota Press, 2002).
 
-Most important, however, was consistent pressure from people of color to effect change. Both African- and Mexican-Americans built their postwar efforts on initiatives undertaken during the war. LULAC was the more conservative of the Mexican-American organizations. Established in Corpus Christi, it emphasized not, as previous groups had, alliances of Mexican nationals living in the United States and American citizens of Mexican descent, but the rights of those of Mexican descent who were citizens. That emphasis was particularly noteworthy during the Depression when 500,000 Mexicans (including some with citizenship) were deported. Part of the strategy to secure citizenship rights were efforts to convince the Anglo majority that Mexican-Americans were no different from their fellow citizens. The leadership stressed Mexican-American “whiteness” and fostered assimilationist practices, particular English language use. LULAC opposed open immigration from Mexico, worried that newcomers, especially those in the _bracero_ program (1942) that allowed farm workers to enter temporarily to ease agricultural labor shortages, would not be assimilable. The G. I. Forum, which was originally founded to secure veterans’ benefits for soldiers of Mexican descent, rejected LULAC’s emphasis on whiteness because it enabled the exclusion of Mexican-Americans from juries in trials of those of Mexican descent. The Forum instead favored a pan-Mexican organizing strategy. LULAC’s assimilation philosophy did enable the organization to push forward with school desegregation cases. Its victory in _Mendez v. Westminster_ (1947) established a basis for the argument that segregation by the very separation of groups conferred inferiority.[^37]
+Most important, however, was consistent pressure from people of color to effect change. Both African- and Mexican-Americans built their postwar efforts on initiatives undertaken during the war. LULAC was the more conservative of the Mexican-American organizations. Established in Corpus Christi, it emphasized not, as previous groups had, alliances of Mexican nationals living in the United States and American citizens of Mexican descent, but the rights of those of Mexican descent who were citizens. That emphasis was particularly noteworthy during the Depression when 500,000 Mexicans (including some with citizenship) were deported. Part of the strategy to secure citizenship rights were efforts to convince the Anglo majority that Mexican-Americans were no different from their fellow citizens. The leadership stressed Mexican-American “whiteness” and fostered assimilationist practices, particular English language use. LULAC opposed open immigration from Mexico, worried that newcomers, especially those in the _bracero_ program (1942) that allowed farm workers to enter temporarily to ease agricultural labor shortages, would not be assimilable. The G. I. Forum, which was originally founded to secure veterans’ benefits for soldiers of Mexican descent, rejected LULAC’s emphasis on whiteness because it enabled the exclusion of Mexican-Americans from juries in trials of those of Mexican descent. The Forum instead favored a pan-Mexican organizing strategy. LULAC’s assimilation philosophy did enable the organization to push forward with school desegregation cases. Its victory in _Mendez v. Westminster_ (1947) established a basis for the argument that segregation by the very separation of groups conferred inferiority.[^38]
 
-[^37]:	Benjamin Marquez, _LULAC: The Evolution of a Mexican American Political Organization_ (Austin: University of Texas Press, 1993), 26-32, 51-4.
+[^38]:	Benjamin Marquez, _LULAC: The Evolution of a Mexican American Political Organization_ (Austin: University of Texas Press, 1993), 26-32, 51-4.
 
-The issue returned in slightly different form in the most celebrated court case of the period, _Brown v. Board of Education_ (1954).[^38] As the lawyers for the NAACP Legal Defense fund took on legally sanctioned separation of the races, they had needed to demonstrate that segregation resulted in unequal facilities and personnel and that enforced separation of black and white pupils marked black students as inferior and placed them at a considerable disadvantage. To argue against the controlling decision _Plessy v. Ferguson_ (1896), in other words, advocates needed to show how and why separation denied one group the possibility for full enjoyment of their capacities. Unlike the lawyers in _Mendez_, those in _Brown_ could not attempt to argue that the plaintiffs had been wrongly classified as nonwhite.
+The issue returned in slightly different form in the most celebrated court case of the period, _Brown v. Board of Education_ (1954).[^39] As the lawyers for the NAACP Legal Defense fund took on legally sanctioned separation of the races, they had needed to demonstrate that segregation resulted in unequal facilities and personnel and that enforced separation of black and white pupils marked black students as inferior and placed them at a considerable disadvantage. To argue against the controlling decision _Plessy v. Ferguson_ (1896), in other words, advocates needed to show how and why separation denied one group the possibility for full enjoyment of their capacities. Unlike the lawyers in _Mendez_, those in _Brown_ could not attempt to argue that the plaintiffs had been wrongly classified as nonwhite.
 
-[^38]:	Among the discussions of _Brown_ consulted were James T. Patterson, _Brown V. Board of Education: A Civil Rights Milestone and Its Troubled Legacy_ (Oxford; New York: Oxford University Press, 2001); Mark V. Tushnet, _The NAACP’s Legal Strategy Against Segregated Education, 1925-1950_ (Chapel Hill: The University of North Carolina Press, 2005); Michael J. Klarman, _Brown V. Board of Education and the Civil Rights Movement_ (New York: Oxford University Press, 2007); Richard. Kluger, _Simple Justice: The History of Brown V. Board of Education and Black America’s Struggle for Equality_ (New York: Knopf, 1976); Risa Lauren Goluboff, _The Lost Promise of Civil Rights_ (Cambridge, Mass.: Harvard University Press, 2007); Waldo E. Martin, “Shades of _Brown_: Black Freedom, White Supremacy, and the Law,” in _Brown V. Board of Education: A Brief History With Documents_, ed. Waldo Martin (Boston: Bedford/St. Martin’s, 1998).
+[^39]:	Among the discussions of _Brown_ consulted were James T. Patterson, _Brown V. Board of Education: A Civil Rights Milestone and Its Troubled Legacy_ (Oxford; New York: Oxford University Press, 2001); Mark V. Tushnet, _The NAACP’s Legal Strategy Against Segregated Education, 1925-1950_ (Chapel Hill: The University of North Carolina Press, 2005); Michael J. Klarman, _Brown V. Board of Education and the Civil Rights Movement_ (New York: Oxford University Press, 2007); Richard. Kluger, _Simple Justice: The History of Brown V. Board of Education and Black America’s Struggle for Equality_ (New York: Knopf, 1976); Risa Lauren Goluboff, _The Lost Promise of Civil Rights_ (Cambridge, Mass.: Harvard University Press, 2007); Waldo E. Martin, “Shades of _Brown_: Black Freedom, White Supremacy, and the Law,” in _Brown V. Board of Education: A Brief History With Documents_, ed. Waldo Martin (Boston: Bedford/St. Martin’s, 1998).
 
 
-That black and white schools were unequal was not so much in dispute in the mid-century debates. State legislatures with separate school districts tacitly acknowledged the blatant inequality in facilities in the 1940s by dramatically increasing spending on all-black schools in order to preserve _de jure_ segregation. Operating from the assumption of absolute incompatibility of the races, segregationists justified segregation as a matter of private racial preferences for people of similar nature. Separation was not, they insisted, intended to reinforce inequality. Any inferiority attached to separate school systems was psychological, something black people imagined. Fund lawyers rejected the argument, contending that separation only made sense if one believed that differences between races were both meaningful and fixed. Since they were neither, segregation constituted exclusion and conferred inferiority. In a revealing confession of the NAACP focus on ending exclusion, Robert Carter, an assistant to lead counsel Thurgood Marshall, later admitted that members of legal team regarded segregation itself as the fundamental evil and not as a “symptom of the deeper evil of racism.”[^39] They believed schools were an entering wedge to bring down the entire edifice. Once separation was ended, black performance would improve and acceptance would follow.
+That black and white schools were unequal was not so much in dispute in the mid-century debates. State legislatures with separate school districts tacitly acknowledged the blatant inequality in facilities in the 1940s by dramatically increasing spending on all-black schools in order to preserve _de jure_ segregation. Operating from the assumption of absolute incompatibility of the races, segregationists justified segregation as a matter of private racial preferences for people of similar nature. Separation was not, they insisted, intended to reinforce inequality. Any inferiority attached to separate school systems was psychological, something black people imagined. Fund lawyers rejected the argument, contending that separation only made sense if one believed that differences between races were both meaningful and fixed. Since they were neither, segregation constituted exclusion and conferred inferiority. In a revealing confession of the NAACP focus on ending exclusion, Robert Carter, an assistant to lead counsel Thurgood Marshall, later admitted that members of legal team regarded segregation itself as the fundamental evil and not as a “symptom of the deeper evil of racism.”[^40] They believed schools were an entering wedge to bring down the entire edifice. Once separation was ended, black performance would improve and acceptance would follow.
 
-[^39]:	Quoted in Patterson, _Brown V. Board of Education_, 41.
+[^40]:	Quoted in Patterson, _Brown V. Board of Education_, 41.
 
-As Risa Lauren Goluboff has argued, the NAACP might have attacked Jim Crow not by appealing to formal equality and psychological harms but by stressing economic harms and labor rights. Building on New Deal economic protections in private workplaces, the alternative strategy would have used the Thirteenth Amendment to challenge economic coercion. If successful, it would have given the black freedom struggle a stronger economic component that would have allowed decent wages and right to organize for agricultural and domestic workers who were excluded from many government programs. The NAACP flirted with the approach but put full effort in all-out effort to overturn government discrimination and reverse the inferiority and stigma caused by segregation. To demonstrate psychological harm, lawyers turned to a controversial social-psychological study by Kenneth and Mamie Clark that purported to show that segregation schools lowered black children’s self-esteem. Segregationists railed against the substitution of psychology for law, conveniently overlooking their own reliance on the psychology of social similarity. In the end, Chief Justice Warren accepted that separation was tantamount to exclusion, arguing in footnote eleven that segregation created a sense of inferiority and deprived black children “of some of the benefits they would receive in a racial[ly] integrated school system.”[^40]
+As Risa Lauren Goluboff has argued, the NAACP might have attacked Jim Crow not by appealing to formal equality and psychological harms but by stressing economic harms and labor rights. Building on New Deal economic protections in private workplaces, the alternative strategy would have used the Thirteenth Amendment to challenge economic coercion. If successful, it would have given the black freedom struggle a stronger economic component that would have allowed decent wages and right to organize for agricultural and domestic workers who were excluded from many government programs. The NAACP flirted with the approach but put full effort in all-out effort to overturn government discrimination and reverse the inferiority and stigma caused by segregation. To demonstrate psychological harm, lawyers turned to a controversial social-psychological study by Kenneth and Mamie Clark that purported to show that segregation schools lowered black children’s self-esteem. Segregationists railed against the substitution of psychology for law, conveniently overlooking their own reliance on the psychology of social similarity. In the end, Chief Justice Warren accepted that separation was tantamount to exclusion, arguing in footnote eleven that segregation created a sense of inferiority and deprived black children “of some of the benefits they would receive in a racial[ly] integrated school system.”[^41]
 
-[^40]:	Arguments for the labor strategy can be found in Goluboff, especially 237-65. _Brown v. Board of Education_, 347 U.S. 483, 494.
+[^41]:	Arguments for the labor strategy can be found in Goluboff, especially 237-65. _Brown v. Board of Education_, 347 U.S. 483, 494.
 
 
 Fund supporters overestimated the degree to which _Brown_ would usher in a colorblind, inclusive society in which race ceased to matter. In part, the Court miscalculated when it ordered districts to dismantle their dual school systems “with all deliberate speed,” which segregationists took to mean “slow, if ever,” rather than immediately. In part, liberal hopes to the contrary, whether for economic, political, or psychological reasons, many whites were not ready to abandon white supremacy for colorblindness. The dawning recognition that resistance was massive provoked a new urgency among activists, who turned more widely to the more confrontational tactics of sit-ins, boycotts, and marches. It also led some to emphasize self determination for people of color rather than formal legal equality.
-Liberals also overestimated their own colorblindness. Many of the standards said to be universal turned out on inspection to be white and middle-class. Such was the case with the work of historian Kenneth Stampp. Stampp’s _Peculiar Institution_ (1956) was a direct challenge to the work of racist historian Ulrich B. Phillips, particularly _Life and Labor in the Old South_ (1929). Phillips asserted that slavery civilized a barbarous people and protected them even at the cost of the economic well-being of the masters. Stampp, to the contrary, saw slavery itself as cruel and inimical to the welfare of the slaves. As for the essential racial character, Stampp, in a line that he would be forced to explain a decade later when a different ideological inclination prevailed, averred “slaves were merely ordinary human beings, that innately Negroes are, after all, only white men with black skins, nothing more, nothing less.”[^41] Stampp’s use of the appositive “after all” here signals that his assumption that it was common sense that at base all peoples are similar. In later editions of his _magnum opus_, Stampp added a paragraph indicating that, of course, he recognized differences in culture but wanted to reject the sense that cultural differences meant blacks lacked the ability to be equal participants in American life. For his purposes, he noted, he could just as well have written that Caucasians were black people with white skin.
+Liberals also overestimated their own colorblindness. Many of the standards said to be universal turned out on inspection to be white and middle-class. Such was the case with the work of historian Kenneth Stampp. Stampp’s _Peculiar Institution_ (1956) was a direct challenge to the work of racist historian Ulrich B. Phillips, particularly _Life and Labor in the Old South_ (1929). Phillips asserted that slavery civilized a barbarous people and protected them even at the cost of the economic well-being of the masters. Stampp, to the contrary, saw slavery itself as cruel and inimical to the welfare of the slaves. As for the essential racial character, Stampp, in a line that he would be forced to explain a decade later when a different ideological inclination prevailed, averred “slaves were merely ordinary human beings, that innately Negroes are, after all, only white men with black skins, nothing more, nothing less.”[^42] Stampp’s use of the appositive “after all” here signals that his assumption that it was common sense that at base all peoples are similar. In later editions of his _magnum opus_, Stampp added a paragraph indicating that, of course, he recognized differences in culture but wanted to reject the sense that cultural differences meant blacks lacked the ability to be equal participants in American life. For his purposes, he noted, he could just as well have written that Caucasians were black people with white skin.
 
-[^41]:	Stampp, _The Peculiar Institution: Slavery in the Ante-Bellum South_, vii.
+[^42]:	Stampp, _The Peculiar Institution: Slavery in the Ante-Bellum South_, vii.
 
-Although he might have put it that way, it was telling that he did not. Stampp was not the only white liberal to ignore black culture. Glazer and Moynihan, for instance, contended that the “Negro is only an American,” who had no special values or culture to protect.[^42] Milton Gordon claimed based on interviews that the leadership of many mainstream African American organizations did not “envision the retention of a Negro subcommunity with its own institutions as a desirable long-range goal for Negroes in the United States.”[^43] Others followed Myrdal in emphasizing the supreme importance of slavery and segregation in defining black life. Historian Stanley Elkins envisioned slavery as sharing with Nazi death camps a tendency to dissolve all previous identity and culture.[^44] Anthropologists Abram Kardiner and Lionel Ovesay posited that whites and blacks shared the same culture and goals. Racism frustrated black attainment of those goals, which resulted in black males neurotically exaggerating white personality traits.[^45]
+Although he might have put it that way, it was telling that he did not. Stampp was not the only white liberal to ignore black culture. Glazer and Moynihan, for instance, contended that the “Negro is only an American,” who had no special values or culture to protect.[^43] Milton Gordon claimed based on interviews that the leadership of many mainstream African American organizations did not “envision the retention of a Negro subcommunity with its own institutions as a desirable long-range goal for Negroes in the United States.”[^44] Others followed Myrdal in emphasizing the supreme importance of slavery and segregation in defining black life. Historian Stanley Elkins envisioned slavery as sharing with Nazi death camps a tendency to dissolve all previous identity and culture. Anthropologists Abram Kardiner and Lionel Ovesay posited that whites and blacks shared the same culture and goals. Racism frustrated black attainment of those goals, which resulted in black males neurotically exaggerating white personality traits.[^45]
 
 [^42]:	Glazer and Moynihan, _Beyond the Melting Pot_, 53.
 
-[^43]:	Gordon, _Assimilation in American Life_, 14.
+[^44]:	Gordon, _Assimilation in American Life_, 14.
 
-[^44]:	Stanley M. Elkins, _Slavery; a Problem in American Institutional and Intellectual Life._ (Chicago: University of Chicago Press, 1959).
-
-[^45]:	Abram Kardiner and Lionel Ovesey, _The Mark of Oppression: A Psychosocial Study of the American Negro_ (New York: Norton, 1951).
+[^45]:		Stanley M. Elkins, _Slavery; a Problem in American Institutional and Intellectual Life._ (Chicago: University of Chicago Press, 1959); Abram Kardiner and Lionel Ovesey, _The Mark of Oppression: A Psychosocial Study of the American Negro_ (New York: Norton, 1951).
 
 
 Many black intellectuals and artists, even those who campaigned vigorously for integration, recoiled from the dismissal of blackness. Such figures as Ralph Ellison, Albert Murray, James Baldwin, and Lorraine Hansberry knew black people were not simply white people with black skins who lacked a culture of their own. Throughout the period in essays and in art they revealed, sometimes inadvertently, black mores and values. Their recognition of black distinctiveness did not, however, entail agreement about the future they desired. “Militant integrationists” in the words of Henry Louis Gates, Murray and Ellison saw in the blues an outlook that could be one the building blocks of a reconstituted American culture.[^46] Baldwin and Hansberry, on the other hand, were considerably more dubious about American ability to include people of color on anything approaching meaningful terms and while never full-blown separatists, admired black rebelliousness and independence.
